fix(gantt): wrong alignment when overflow

--- a/src/GZCTF/ClientApp/src/styles/components/GanttTimeline.module.css
+++ b/src/GZCTF/ClientApp/src/styles/components/GanttTimeline.module.css
@@ -92,7 +92,6 @@
 
   padding: 0 4px;
   max-width: 300px;
-  min-width: var(--width);
   pointer-events: none;
   user-select: none;
   overflow: hidden;
